[#11620] ObjectDefinition - propertyDefinitionData and dynamic reload